--- a/index.css
+++ b/index.css
@@ -1096,6 +1096,7 @@ html.u-app body * {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
 }
 .react-datagrid.z-with-column-menu .z-column-header .z-show-filter,
 .react-datagrid.z-with-column-menu .z-column-header .z-show-menu {
