--- a/style/header.styl
+++ b/style/header.styl
@@ -29,6 +29,7 @@
         position absolute
         top 0
         left 0
+        z-index 1
     
     &.z-with-column-menu
         .z-column-header
